# bolbol-engine

./: CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
opengl/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/: glad.c
